--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "tsc && node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --watch src -e ts --exec \"ts-node -r tsconfig-paths/register src/server.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint 'src/**/*.{ts,js}' --fix"
   },
@@ -49,6 +49,7 @@
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   }
 }
